fix: change history overflow style

--- a/src/page-components/history/History.module.scss
+++ b/src/page-components/history/History.module.scss
@@ -60,7 +60,7 @@
 
 .requests {
   width: 100%;
-  margin-top: 50px;
+  margin-top: 22px;
 
   & .requestItem {
     width: 100%;
@@ -78,9 +78,7 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
-    overflow-y: scroll;
     width: 100%;
-    max-height: 50dvh;
   }
 }
 
